fix: home page contant visiblity

--- a/css/home.css
+++ b/css/home.css
@@ -25,8 +25,15 @@ main {
   font-weight: 700;
   font-size: 5rem;
 }
+
 .overlap-heading {
   padding: 2.5rem;
+  background: radial-gradient(
+    circle,
+    rgba(0, 0, 0, 0.61) 1%,
+    rgba(0, 0, 0, 0.54) 25%,
+    rgba(244, 244, 244, 0) 80%
+  );
 }
 
 /* popular section */
